# Subdivisions

./: readme.md
source/: CMakeLists.txt  butterfly_scheme.cpp  butterfly_scheme.h  loop_scheme.cpp  loop_scheme.h  main.cpp  sqrt3_scheme.cpp  sqrt3_scheme.h
